--- a/code/style.css
+++ b/code/style.css
@@ -3,13 +3,16 @@ html{
     color: #000000;
     font-family: sans-serif;
   }
+  .container{
+    display: none;
+  }
   header {
     display: flex;
     flex-direction: column;
   }
   header img {
-      align-self: center;
-      width: 40%;
+    align-self: center;
+    width: 40%;
   }
   .logo{
     display: none;
@@ -20,9 +23,9 @@ html{
   }
   h2 {
     text-align: center;
-  }
+  } 
   h3{
-      margin-bottom: 2px;
+    margin-bottom: 2px;
   }
   .nav-links {
     display: none;
@@ -57,70 +60,74 @@ html{
     background: #000000;
   }
   .big-news{
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
   }
   .big-news img{
-      width: 100%;
+    width: 100%;
   }
   .card-container{
-      display: flex;
-      align-items: center;
-      flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   .article-card{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      width: 80%;
-      margin: 10px;
-      box-shadow: 5px 10px 18px #888888;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 80%;
+    margin: 10px;
+    box-shadow: 5px 10px 18px #888888;
   }
   .article-card img{
-      width: 100%;
+    width: 100%;
   }
   @media (min-width: 668px){
+    .card-container{
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .article-card{
+      width: 45%;
+      margin: 5px;
+    }
+    .nav-links{
+      display: flex;
+      font-size: 20px;
+    }
+    .hamburger{
+      display: none;
+    }
+    .big-news{
+      box-sizing: border-box;
+      flex-direction: row;
+      margin-bottom: 20px;
+    }
+    .big-news img{
+      display: block;
+      align-self: center;
+      max-width: 60vw;
+      max-height: 40vw;
+      width: auto;
+      height: auto;
+    }
     .big-news-text{
       box-sizing: border-box;
-      padding: 25px;
+      max-height: 40vw;
       text-align: left;
+      padding: 2px;
+      overflow: scroll;
     }
-    .card-container{
-        justify-content: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        }
-    .article-card{
-        max-width: 300px;
-        max-height: 650px;
-        overflow: hidden;
-         }
-    article{
-        font-size: 20px;
-        display: flex;
-        margin: 50px 0;
-      }
-    .big-news{
-          display: flex;
-          flex-direction: row;
-        }
-    .big-news img{
-        align-self: center;
-        width: 60%;
-      }
-    .nav-links{
-        display: flex;
-        font-size: 20px;
-        }
-    .hamburger{
-          display: none;
-         }
+    .big-news h2{
+      margin: 0;
+    }
   }
   @media (min-width: 1024px){
+    .article-card{
+      width: 22%
+    }
     header{
       flex-direction: row;
       justify-content: center;
@@ -138,6 +145,11 @@ html{
       align-items: center;
       margin: 50px 0;
     }
+    h1{
+      display: block;
+      font-size: 65px;
+      text-align: center;
+    }
     .container{
       display: flex;
       flex-direction: column;
@@ -149,25 +161,4 @@ html{
       margin: 50px 0 50px 50px;
       width: 100px;
     }
-    .card-container{
-      max-width: 1080px;
-    }  
-    .article-card{
-          max-width: 250px;
-      }
-    .big-news{
-      flex-direction: row;
-    }
-    .big-news img{
-      align-self: center;
-      max-width: 700px;
-    }
-    p{
-      max-width: 750px;
-    }
-    h1{
-          display: block;
-          font-size: 65px;
-          text-align: center;
-      }
   }
