aligned text in desktopview

--- a/code/style.css
+++ b/code/style.css
@@ -128,6 +128,12 @@ html{
     .article-card{
       width: 22%
     }
+    .card-text{
+      padding: 5px;
+    }
+    .card-text p{
+      text-align: left;
+    }
     header{
       flex-direction: row;
       justify-content: center;
