--- a/code/style.css
+++ b/code/style.css
@@ -4,6 +4,10 @@ html {
   font-family: Helvetica, sans-serif;
 }
 
+body {
+  margin: 0px;
+}
+
 p {
   color: #777777;
 }
@@ -26,6 +30,23 @@ header {
   justify-content: space-between;
   align-items: center;
   
+}
+
+.hamburger {
+  width: 35px;
+  height: 25px;
+  margin: 7px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-evenly;
+}
+
+.hamburger div {
+  width: 35px;
+  height: 4px;
+  background: white;
+  border-radius: 5px;
 }
 
 nav {
@@ -197,8 +218,14 @@ footer {
 
 }
 
-.links {
+.links-prio-1 {
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.links-prio-2 {
+  display: none;
   flex-direction: column;
   justify-content: space-around;
 }
@@ -267,6 +294,10 @@ footer p {
     align-items: center;
   }
 
+  .hamburger {
+    display:none;
+  }
+
   nav {
     display: flex; 
     width: 100%;
@@ -298,6 +329,10 @@ footer p {
 */
   .smallArticle {
     width: 43%; 
+  }
+
+  .links-prio-2 {
+    display: flex;
   }
 }
 
