--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,155 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #F7DACD;
+  color: black;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif; 
+  margin: 0px;
+}
+
+* {
+box-sizing: border-box;
+}
+
+/**** HEADER ****/
+header {
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
+}
+
+.logo {
+  width: 120px;
+  padding: 40px 0px 0px 20px;
+}
+
+.header-heading {
+  text-transform: uppercase;
+  color: #1B27F5;
+  font-weight: bold; 
+  padding: 40px 0px 0px 60px; 
+  font-size: 80px;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  flex-wrap: wrap;
+  padding-bottom: 40px;
+}
+
+/**** GENERAL STYLING ****/
+a {
+  text-decoration: none;
+  color: #1B27F5;
+  font-size: 24px;
+  padding: 20px;
+}
+
+a:hover {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+h2 {
+  font-size: 36px;
+  text-transform: uppercase;
+  margin: 0px;
+}
+
+h3 {
+  text-transform: uppercase;
+  margin: 0px;
+  padding-top: 20px;
+}
+
+p {
+  text-align: left;
+  width: 90%;
+  padding-bottom: 30px;
+  }
+
+/**** ARTICLE ****/
+.news-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 100px;
+  margin-left: 10%;
+  margin-right: 10%;
+  }
+
+.news {
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  padding: 5px;
+  margin: 2px;
+  }
+
+.tag {
+  font-weight: bold;
+  text-transform: uppercase; 
+  font-size: 12px;
+  color:#1B27F5; 
+  padding: 0px;
+  margin: 30px 0px 15px 0px;
+  } 
+
+.news-img {
+  width: 100%;
+}
+
+.button {
+  font-size: 18px;
+  border: 1px solid #1B27F5; 
+  padding: 8px;
+}
+
+/**** OTHER NEWS ****/
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 5%;
+  height: 100%;
+}
+
+.card {
+  flex-direction: column;
+  align-items: center;
+  width: 25%;
+  height: 25%;
+  padding: 5px;
+}
+
+.card-img {
+  width: 100%;
+  padding-bottom: 20px;
+  }
+
+.card-link {
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 0px;
+}
+
+a.card-link:hover {
+  color: #1B27F5; 
+  text-decoration: none;
+}
+
+/**** FOOTER ****/
+
+footer {
+  background-color: white;
+  padding: 60px;
+}
+
+/**** FOR MOBILE ****/
