--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,256 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+*{
+  box-sizing: border-box;
+}
+
+.pagewraper{
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.header {
+  background-color:white;
+  color: black;
+  border-bottom: 2px solid grey;
+}
+
+.header__title{
+  font-size: 70px;
+  font-weight: bolder;
+  margin: 0;
+  padding: 10px;
+  font-family:'Cormorant Garamond', serif;
+}
+.header__top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__social {
+  width: 25%
+}
+.header__nav{
+  text-align: center;
+  border: 1px solid black;
+  background-color: grey;
+}
+.header__nav__item{
+  padding:5px;
+  font-size: 20px;
+  color: white;
+  font-family: 'Cormorant Garamond', serif;
+  text-decoration: none;
+}
+
+.header__nav__item:visited{
+  color: purple;
+}
+
+.header__nav__item:hover{
+  color: darkblue;
+}
+.header__social__item__icon{
+  height: 30px;
+  width: 30px;
+  padding: 5px;
+}
+
+.header__social a{
+  text-decoration: none;
+}
+
+.header__actions{
+  width: 25%;
+  text-align: right;
+  padding-right: 5px;
+}
+
+.header__actions__item{
+  padding: 5px;
+  font-weight: bold;
+}
+.Topcontent{
+display: flex;
+padding-top: 10px;
+}
+
+@media screen and (max-width:600px) {
+  .Topcontent{
+    flex-direction: column;
+  }
+}
+.Featured__label{
+  display: inline-block;
+  padding: 5px;
+  background-color: grey;
+  color:white;
+}
+.Featured__article a{
+  display: block;
+}
+.Featured__article img{
+  border: 4px solid grey;
+  object-fit: cover;
+  }
+
+.Featured{
+  flex: 2;
+}
+
+.Featured__link{
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 10px;
+}
+a.Featured__link:visited{
+  color: purple
+}
+
+a.Featured__link:hover {
+  color:darkblue;
+}
+
+.Mostread{
+  margin-left: 20px;
+  flex: 1;
+}
+
+.Mostread__links{
+  padding: 5px;
+}
+
+.Mostread__links li{
+  margin-bottom: 5px;
+  list-style: none;
+}
+
+.Topleft{
+  margin-left: 50px;
+  flex: 1;
+}
+
+.Topleft__image{
+  border: 4px solid grey;
+}
+
+.Discover__label{
+  font-size:20px;
+}
+
+.Discover_section_layer1{
+  display: flex;
+  background-color: grey;
+  }
+  @media screen and (max-width: 600px) {
+  .Discover_section_layer1 {
+      flex-direction:column;
+  }
+
+.Discover__block{
+  height: 270px;
+  border: 2px solid white;
+  padding: 5px;
+  margin: 10px;
+  flex: 1;
+  box-shadow: 5px 5px purple;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  }
+
+.Discover__Image {
+  height: 200px;
+  margin-bottom: 10px;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+
+.Discover__block:hover .Discover__Image{
+  opacity: 0.5;
+}
+
+.Discover__block:hover {
+  color: darkblue;
+}
+.Discover__block:visited {
+  color: purple;
+}
+.Discover__Text {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.Discover__Image img {
+  object-fit: cover;
+  height: 100%;
+}
+
+.Second__Layer_Content{
+  display: flex;
+}
+
+@media screen and (max-width: 600px){
+  .Second__Layer__Content{
+    flex-direction:column;
+  }
+}
+
+.Second__Layer__Content > * {
+  flex: 1;
+}
+
+.Second__Layer__left{
+  display:flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 600px){
+  .Second__Layer__left{
+    flex-direction: column;
+  }
+}
+
+.Audience__Opinion__left__content{
+  display: flex;
+  flex: 1;
+  padding-top: 10px;
+  background-color: grey;
+  height: 320px;
+}
+
+.VIDEO iframe{
+  width: 100%;
+  display: block;
+}
+  
+
+.VIDEO {
+  padding-left: 30px;
+}
+
+
+.Footer{
+  text-align: center;
+  border-top: 2px grey solid;
+  margin: 30px;
+  position: relative;
+}
+
+@media screen and (max-width: 600px){
+  .Footer{
+
+  }
+}
+
+.Footer__item{
+  color: darkblue;
+  display: inline-block;
+  font-weight: bold;
+  padding: 10px;
+  text-decoration: none;
 }
