--- a/code/style.css
+++ b/code/style.css
@@ -123,6 +123,11 @@ h2 {
   animation: pulse 5s infinite;
 }
 
+.cards-container .card:hover {
+  transform: scale(1.1);
+  position: relative;
+}
+
 .cards-container .card-img {
   max-height: 300px;
   height: 100%;
