--- a/code/style.css
+++ b/code/style.css
@@ -10,8 +10,15 @@ body {
 /* HEADER+NAVBAR*/
 
 header {
-  background:#e5e6b4;
+  background: white;
   height: 100px;
+}
+
+header:hover {
+  background:#e5e6b4;
+  opacity: 0.5;
+  transition: all 500ms ease;
+  
 }
 
 nav a  {
@@ -23,15 +30,24 @@ nav a  {
   float: right;
 }
 
+h1 {
+  font-size: 60px;
+}
+
 /* INLEDNING*/
 
 .big-news {
+  font-size: 20px;
+  margin-right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
+  padding-top: 40px;
+  padding-bottom: 80px;
+
 }
 
 .big-news img {
@@ -53,7 +69,9 @@ nav a  {
 
 h4{
   text-align: center;
-  margin: 50px;
+  margin: 70px;
+  font-size: 20px;
+
   
 }
 
@@ -83,6 +101,21 @@ h4{
   width: 40%;
 }
 
+/*FOOTER*/
+
+footer {
+  font-size: 20px;
+  text-align: center;
+  color: #727768;
+  width: 100%;
+  height:100px;
+  margin-top: 50px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+}
 
 /* MEDIA QUERIES*/
 
@@ -123,5 +156,11 @@ h4{
   .img-container:hover h4 {
     visibility: visible;
   }
+  h4 {
+    font-size: 30px;
+  }
 
+  .big-news p {
+    font-size: 30px;
+  }
 }     
