added max-width to .big-news-text

--- a/code/style.css
+++ b/code/style.css
@@ -115,6 +115,7 @@ html{
     .big-news-text{
       box-sizing: border-box;
       max-height: 40vw;
+      max-width: 40vw;
       text-align: left;
       padding: 2px;
       overflow-y: scroll;
