--- a/style.css
+++ b/style.css
@@ -124,11 +124,11 @@ body{
 
 
 footer {
-  background: #a4b494;
-  color: #7f8f6e;
-  font-family: Roboto, sans-serif;
-  display:flex;
-  justify-content: center;
+  background: #355a42;
+    color: #ffffff;
+    font-family: Roboto, sans-serif;
+    display: flex;
+    justify-content: center;
 }
 
 /* Media Queries for Phone*/
