--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 h2 {
-  font-family: serif;
+  font-family: 'ITC Avantgarde', serif;
   font-size: 24px;
   opacity: 0.8;
 }
@@ -102,11 +102,11 @@ nav a {
 
  .banner-container p {
    margin: 0;
-   font-family: Avantgarde, serif;
+   font-family: 'ITC Avantgarde', serif;
  }
 
  @keyframes subscribe {
-   from {background-color:beige}
+   from {background-color:beige;}
    to {background-color: turquoise;}
  }
 
@@ -164,14 +164,12 @@ img.top {
 }
 
 .cards {
-  
   flex-wrap: wrap;
   text-align: center;
   padding: 20px; 
   margin-bottom: 20px;
   box-shadow: 0 2px 5px 0 #d3d3d3;
   transition: 0.3s;
-  border: solid 1p;
 }
 
 p {
@@ -215,8 +213,8 @@ footer p {
 
   nav {
     display: inline-block;
-    padding-right: 20px;
-    order: 0; 
+    order: 0;
+    padding-right: 20px; 
   }
 
   .site-name {
@@ -281,9 +279,10 @@ footer p {
 
   nav {
     display: inline-block;
+    order: 2;
     margin-left: auto;
     padding-right: 30px;
-    order: 2;
+    
   }
 
   header img{
@@ -320,7 +319,7 @@ footer p {
 
   img.top {
     width: 58%;
-    max-height: 600px
+    max-height: 600px;
   }
 
   .small-news-container {
@@ -329,7 +328,7 @@ footer p {
     justify-content: space-evenly;
   }
 
-  .cards:hover{
+  .cards:hover {
     opacity: 0.7;
   }
   
