--- a/code/style.css
+++ b/code/style.css
@@ -222,8 +222,6 @@ h2 {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
-  /* border-top: 1px #E5E5E5 solid; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   padding: 5px;
@@ -236,21 +234,19 @@ h2 {
   }
 }
 
-/* On mouse-over, add a deeper shadow */
-
+/* On mouse-hover, add a deeper shadow */
 .small-news-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 footer {
   background: #000000;
-  position: absolute;
+  width: 100%;
   right: 0;
   left: 0;
   padding: 10px;
   text-align: center;
   margin: 10px 0px 0px 0px;
-  /* border-top: 1px #E5E5E5 solid; */
 }
 
 @media (min-width: 768px) {
@@ -261,7 +257,6 @@ footer {
 
 footer p {
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: ;
   color: #ffffffa4;
   margin: auto;
   font-size: 12px;
@@ -271,6 +266,5 @@ footer p {
 body {
   background: #FFFFFF;
   color: #121212;
-  /* display: inline; */
   margin: 0;
 }
