--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,220 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background-color: #002233;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+}
+
+
+/*** MOBILE MAIN DESIGN ***/
+
+@media (min-width: 1px) and (max-width: 667px) {
+
+  /*** HEADER ***/
+
+  header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+    
+  nav {
+      display:none;
+    }
+
+  .order-1{
+      order: 1;
+    }
+    
+  .order-2 {
+      order: 2;
+    }
+  
+  .order-3 {
+      order: 3;
+    }
+  
+  .order-4 {
+      order: 4;
+    }
+    
+  a:link {
+      text-decoration: none;
+      color: white;
+      }
+    
+  a:visited {
+      text-decoration: none;
+      color: white;
+    }
+    
+  a:hover {
+      color: white;
+      text-decoration: underline;
+    }
+    
+  .logo {
+    width: 100px;
+    height: 100ox;
+    margin: 20px;
+    }
+
+    /*** BIG NEWS ***/
+
+  .big-news {
+      padding: 30px;
+      margin-top: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    /*** NEWS GRID ***/
+
+
+    .other-news {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      
+      }
+      
+    .news {
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background-color: #004466;
+      margin: 10px;
+    }
+  
+}
+
+
+/*** TABLET RESPONSIVE ***/
+
+@media (min-width: 668px) and (max-width: 1024px) {
+  
+  header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+    
+    nav {
+      width: 50%;
+      margin: 20px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .order-1{
+      order: 1;
+    }
+    
+    .order-2 {
+      order: 2;
+    }
+  
+    .order-3 {
+      order: 3;
+    }
+  
+    .order-4 {
+      order: 4;
+    }
+    
+    a:link {
+      text-decoration: none;
+      color: white;
+      }
+    
+    a:visited {
+      text-decoration: none;
+      color: white;
+    }
+    
+    a:hover {
+      color: white;
+      text-decoration: underline;
+    }
+    
+    .logo {
+    width: 100px;
+    height: 100ox;
+    margin: 20px;
+    }  
+  
+  .big-news {
+    padding: 20px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    }
+
+  .other-news {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+      
+    }
+      
+  .news {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #004466;
+    margin: 10px;
+    }
+
+
+}
+
+
+/*** DESKTOP RESPONSIVE ***/
+
+@media (min-width: 1025px) {
+
+  header{
+    background-color: #002233;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+    
+    nav {
+      width: 50%;
+      margin: 20px;
+      display: flex;
+      justify-content: space-between;
+    }
+    
+    a:link {
+      text-decoration: none;
+      color: white;
+      }
+    
+    a:visited {
+      text-decoration: none;
+      color: white;
+    }
+    
+    a:hover {
+      color: white;
+      text-decoration: underline;
+    }
+    
+    .logo {
+    width: 100px;
+    height: 100ox;
+    margin: 20px;
+    }
+
 }
