--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,240 @@
 html {
-  background: #0025ff;
   color: #fff;
 }
+
+p {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+}
+
+/*** NAVBAR STYLES ***/
+header {
+  width: 100%;
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+}
+
+.logo {
+  width: 60px;
+  height: 60px;
+  padding: 0;
+  margin: 10px;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+}
+
+header .link {
+  font-size: 10px; 
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  margin: 11px;
+}
+
+a:link, a:visited {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover, a:active {
+  color: #e1c699;
+}
+
+/*** MAIN ARTICLE STYLES ***/
+
+.frontpage {
+  width: 100%;
+  height: 90vh;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.frontpage-container {
+  width: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px;
+ }
+
+.frontpage-container h1 {
+  color: #fff;
+  font-size: 23px;
+  font-weight: 500;
+  padding: 5px;
+}
+
+.frontpage-container p {
+  color: #666;
+  font-size: 12px;
+  text-align: center;
+  font-weight: lighter;
+  padding: 5px;
+}
+
+.big-picture {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.article-container {
+  height: 85vh;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.article {
+  width: 70vh;
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 12px;
+}
+
+.article-pictures {
+  width: 70vh;
+  height: auto;
+  margin-bottom: 10px;
+  max-width: 100%;
+}
+
+.article-header {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  font-size: px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.article-header h1 {
+  font-weight: lighter;
+  font-size: 20px;
+}
+
+.article-container h2 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.article-container p {
+  font-weight: 300;
+  font-size: 9px;
+}
+
+.article-container img {
+  opacity: 0.6;
+  transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -webkit-transition: opacity 1s ease-in-out;
+  box-shadow: 3px 3px 1px #ccc;
+  -moz-box-shadow: 3px 3px 1px #f6efe2;
+  -webkit-box-shadow: 3px 3px 1px #f6efe2;
+  -khtml-box-shadow: 3px 3px 1px #f6efe2;
+}
+
+.article-container img:hover {
+  opacity: 1.0;
+  transition: opacity .55s ease-in-out;
+  -moz-transition: opacity .55s ease-in-out;
+  -webkit-transition: opacity .55s ease-in-out;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  header .link {
+    font-size: 12px; 
+  }
+
+  .logo {
+    width: 70px;
+    height: 70px;
+  }
+  
+  .frontpage-container h1 {
+    font-size: 20px;
+  }
+
+  .frontpage-container {
+    flex-direction: column;
+  }
+
+  .frontpage-container h1 {
+    font-size: 25px;
+  }
+
+  .frontpage-container p {
+    font-size: 12px;
+  }
+
+  .article-pictures {
+    width: 34vh;
+  }
+
+  .article {
+    width: 34vh;
+  }
+}
+
+@media (min-width: 1025px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  header .link {
+    font-size: 13px; 
+  }
+
+  .logo {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .frontpage-container h1 {
+    font-size: 30px;
+  }
+
+  .frontpage-container p {
+    font-size: 13px;
+  }
+
+  .article-pictures {
+    width: 36vh;
+  }
+
+  .article {
+    width: 36vh;
+  }
+}
+
