--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h1 {
+h1, h2 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -80,8 +80,15 @@ a:hover, a:active {
  }
 
 .frontpage-container h1 {
+  color: #e1c699;
+  font-size: 40px;
+  font-weight: 800;
+  padding: 5px;
+}
+
+.frontpage-container h2 {
   color: #fff;
-  font-size: 23px;
+  font-size: 21px;
   font-weight: 500;
   padding: 5px;
 }
@@ -181,17 +188,17 @@ a:hover, a:active {
   }
   
   .frontpage-container h1 {
-    font-size: 20px;
+    font-size: 40px;
+  }
+
+  .frontpage-container h2 {
+    font-size: 22px;
   }
 
   .frontpage-container {
     flex-direction: column;
   }
-
-  .frontpage-container h1 {
-    font-size: 25px;
-  }
-
+ 
   .frontpage-container p {
     font-size: 12px;
   }
@@ -209,7 +216,6 @@ a:hover, a:active {
   header {
     display: flex;
     justify-content: space-between;
-
   }
 
   header .link {
@@ -222,7 +228,11 @@ a:hover, a:active {
   }
   
   .frontpage-container h1 {
-    font-size: 30px;
+    font-size: 40px;
+  }
+
+  .frontpage-container h2 {
+    font-size: 25px;
   }
 
   .frontpage-container p {
@@ -237,4 +247,3 @@ a:hover, a:active {
     width: 36vh;
   }
 }
-
